updated swagger tags to show gets in the proper spots
